--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -19,6 +19,7 @@ const isActive = props.href === pathname || props.href === "/" + subpath?.[0];
     flex-shrink: 0;
     color: inherit;
     font-weight: 600;
+    text-decoration: none;
     transition:
       font-weight 0.15s ease-in-out,
       filter 0.15s ease-in-out;
